# Copyright (c) 2006 Software Laboratory, SAMSUNG Electronics, Inc.
# All rights reserved.
#
# This software is the confidential and proprietary information of
# SAMSUNG Electronics, Inc. ("Confidential Information").
# You shall not disclose such Confidential Information and shall use it
# only in accordance with the terms of the license agreement you entered into
# with SAMSUNG Electronics.
#
# Orignal by Jin-mook Lim <jinmook.lim@samsung.com>
#            Bum-seok Lee <bumseok.lee@samsung.com>
# Created by Jaekyun Lee <jkyun.lee@samsung.com>
# Modified by Heechul jeon <heechul.jeon@samsung.com>

SUBDIRS =

if GST_EXT_USE_EXT_SOUNDALIVE
SUBDIRS += soundalive
endif

if GST_EXT_USE_EXT_SECRECORD
SUBDIRS += secrecord
endif

if GST_EXT_USE_EXT_WFDMANAGER
SUBDIRS += wfdmanager
endif

if GST_EXT_USE_EXT_WFDTSDEMUX
SUBDIRS += wfdtsdemux
endif
